--- a/css/style.css
+++ b/css/style.css
@@ -143,10 +143,11 @@
     }
 
     .container2 {
-        display: inline-grid;
+        display: grid;
         grid-template-columns: auto auto auto auto;
-        gap: 2rem 1.5rem;
-        margin: 0 12rem;
+        gap: 2rem 0;
+        margin: 0 10rem;
+        padding-left: 2rem;
     }
 
     .container2 p:hover {
@@ -370,7 +371,7 @@
     header {
         background-image: url("../images/mobile/image-hero.jpg");
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
         background-position: center;
         height: 40rem;
         width: 24rem;
@@ -379,7 +380,7 @@
     }
 
     .navBar {
-        padding: 2rem 1rem;
+        padding: 2rem 1.5rem;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -415,7 +416,6 @@
 
     #open {
         display: inline-block;
-        padding-right: 1rem;
     }
 
     #close {
@@ -434,7 +434,7 @@
         border: 2px;
         border-style: solid;
         border-color: var(--white);
-        margin-left: 1rem;
+        margin-left: 1.5rem;
         margin-top: 4rem;
         padding: 0 1rem 8rem 1.5rem;
         position: relative;
@@ -500,7 +500,7 @@
         background-color: var(--white);
         position: absolute;
         bottom: -4rem;
-        left: 14rem;
+        left: 9rem;
     }
 
     button:hover {
@@ -526,7 +526,7 @@
         background-size: contain;
         padding: 1.5rem 8rem;
         color: var(--white);
-        width: 12rem;
+        width: 6rem;
         font-family: var(--josefin-sans);
         font-weight: 200;
         text-align: start;
@@ -536,7 +536,7 @@
     .deep p {
         margin-left: -6rem;
         margin-top: 3rem;
-        font-size: 32px;
+        font-size: 24px;
         width: 8rem;
     }
 
@@ -546,7 +546,7 @@
         background-size: contain;
         padding: 1.5rem 8rem;
         color: var(--white);
-        width: 12rem;
+        width: 6rem;
         font-family: var(--josefin-sans);
         font-weight: 300;
         text-align: start;
@@ -555,7 +555,7 @@
     .night p {
         margin-left: -6rem;
         margin-top: 3rem;
-        font-size: 32px;
+        font-size: 24px;
         width: 8rem;
     }
 
@@ -565,7 +565,7 @@
         background-size: contain;
         padding: 1.5rem 8rem;
         color: var(--white);
-        width: 12rem;
+        width: 6rem;
         font-family: var(--josefin-sans);
         font-weight: 200;
         text-align: start;
@@ -574,7 +574,7 @@
     .soccer p {
         margin-left: -6rem;
         margin-top: 3rem;
-        font-size: 32px;
+        font-size: 24px;
         width: 10rem;
     }
 
@@ -584,7 +584,7 @@
         background-size: contain;
         padding: 1.5rem 8rem;
         color: var(--white);
-        width: 12rem;
+        width: 6rem;
         font-family: var(--josefin-sans);
         font-weight: 200;
         text-align: start;
@@ -593,7 +593,7 @@
     .grid p {
         margin-left: -6rem;
         margin-top: 3rem;
-        font-size: 32px;
+        font-size: 24px;
         width: 8rem;
     }
 
@@ -603,7 +603,7 @@
         background-size: contain;
         padding: 1.5rem 8rem;
         color: var(--white);
-        width: 12rem;
+        width: 6rem;
         font-family: var(--josefin-sans);
         font-weight: 200;
         text-align: start;
@@ -612,7 +612,7 @@
     .above p {
         margin-left: -6rem;
         margin-top: 3rem;
-        font-size: 30px;
+        font-size: 24px;
         width: 10rem;
     }
 
@@ -622,7 +622,7 @@
         background-size: contain;
         padding: 1.5rem 8rem;
         color: var(--white);
-        width: 12rem;
+        width: 6rem;
         font-family: var(--josefin-sans);
         font-weight: 200;
         text-align: start;
@@ -631,7 +631,7 @@
     .pocket p {
         margin-left: -6rem;
         margin-top: 3rem;
-        font-size: 32px;
+        font-size: 24px;
         width: 8rem;
     }
 
@@ -641,7 +641,7 @@
         background-size: contain;
         padding: 1.5rem 8rem;
         color: var(--white);
-        width: 12rem;
+        width: 6rem;
         font-family: var(--josefin-sans);
         font-weight: 200;
         text-align: start;
@@ -650,7 +650,7 @@
     .curiosity p {
         margin-left: -6rem;
         margin-top: 3rem;
-        font-size: 32px;
+        font-size: 24px;
         width: 8rem;
     }
 
@@ -660,7 +660,7 @@
         background-size: contain;
         padding: 1.5rem 8rem;
         color: var(--white);
-        width: 12rem;
+        width: 6rem;
         font-family: var(--josefin-sans);
         font-weight: 200;
         text-align: start;
@@ -669,7 +669,7 @@
     .fisheye p {
         margin-left: -6rem;
         margin-top: 3rem;
-        font-size: 32px;
+        font-size: 24px;
         width: 10rem;
     }
 
@@ -679,7 +679,7 @@
 
     .footer-container {
         background-color: var(--black);
-        padding: 2rem 8rem 2rem 8rem;
+        padding: 2rem 4rem 2rem 4rem;
         position: relative;
     }
 
@@ -695,7 +695,7 @@
         gap: 1rem;
         color: var(--white);
         position: absolute;
-        bottom: 5rem;
+        bottom: 4rem;
     }
 
     .bottom {
@@ -723,6 +723,8 @@
     .copyright {
         color: var(--darkGray);
         padding-top: 3rem;
+        font-size: 12px;
+
     }
 
     .attribution {
